syntax = "proto3";
package monitor_service;

service Monitor {
    rpc GetMonitors (GetMonitorsRequest) returns (GetMonitorsReply);
    rpc DeleteMonitor (DeleteMonitorRequest) returns (DeleteMonitorReply);
    rpc CreateMonitor (CreateMonitorRequest) returns (CreateMonitorReply);
}

enum MonitorType {
    NEWS_API = 0;
    WEB_SCRAPER = 1;
};

enum ParserType {
    SOHA = 0;
    VNEXPRESS = 1;
}

message NewsApiConfiguration {
    optional string api_key = 1;
    string country = 2;
    optional string topic = 3;
}

message ScraperApiConfiguration {
    string url = 1;
    string name = 2;
    ParserType parser_type = 3;
}

message MonitorConfiguration {
    uint64 interval_in_seconds = 1;
    MonitorType monitor_type = 2;
    optional NewsApiConfiguration news_api_configuration = 3;
    optional ScraperApiConfiguration scraper_configuration = 4;
}

message GetMonitorsRequest {
}

message GetMonitorsReply {
    repeated MonitorConfiguration monitor_configurations = 1;
}

message DeleteMonitorRequest {
    uint32 index = 1;
}

message DeleteMonitorReply {
}

message CreateMonitorRequest {
    MonitorConfiguration monitor_configuration = 1;
}

message CreateMonitorReply {
}